--- a/sqld/travelapp/src/main/resources/application.properties
+++ b/sqld/travelapp/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://127.0.0.1:3306/jdbc_ex
+#url=jdbc:mysql://127.0.0.1:3306/jdbc_ex
+url=jdbc:mysql://localhost:3306/scoula_db
 id=scoula
 password=1234
